2014-08-04  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/ia64/clone2.S: Deconditionalize the code
	that was previously under [RESET_PID].
	* sysdeps/unix/sysv/linux/ia64/nptl/clone2.S: File removed.

2014-08-04  Andreas Schwab  <schwab@suse.de>

	* sysdeps/ieee754/ldbl-96/s_fma.c: Include <math_private.h>.

2014-08-03  Mike Frysinger  <vapier@gentoo.org>

	* stdlib/tst-setcontext.c (test_stack): Fix coding style.
	(main): Likewise.

2014-08-01  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/arm/lowlevellock.h: File removed.

2014-08-01  Richard Henderon  <rth@redhat.com>

	* sysdeps/ieee754/dbl-64/s_fma.c (__fma): Use math_force_eval before
	feclearexcept; use math_opt_barrier instead of open-coded asm; fix
	typo in exact zero test.
	* sysdeps/ieee754/ldbl-128/s_fmal.c (__fmal): Likewise.
	* sysdeps/ieee754/ldbl-96/s_fma.c (__fma): Likewise.
	* sysdeps/ieee754/ldbl-96/s_fmal.c (__fmal): Likewise.

2014-08-01  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/arm/sysdep.h (PTR_MANGLE_LOAD, PTR_MANGLE)
	(PTR_MANGLE2, PTR_DEMANGLE, PTR_DEMANGLE2): Move these macros...
	* sysdeps/arm/sysdep.h: ... here.
	[!__ASSEMBLER__]: Include <stdint.h>.

2014-08-01  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* include/libc-symbols.h (HAVE_LIBINTL_H): Define macro.
	(HAVE_WCTYPE_H): Likewise.
	(HAVE_ISWCTYPE): Likewise.
	(ENABLE_NLS): Likewise.
	* posix/regex_internal.h [(defined MB_CUR_MAX && HAVE_WCTYPE_H
	&& HAVE_ISWCTYPE) || _LIBC]: Sync up with gnulib.

	* posix/regex_internal.c: Check if DEBUG is defined and is
	set.

	* include/libc-symbols.h (HAVE_MBSTATE_T): Define macro.
	(HAVE_MBSRTOWCS): Likewise.
	* posix/fnmatch.c: Include string.h unconditionally.

2014-08-01  Stefan Liebler  <stli@linux.vnet.ibm.com>

	* NEWS: Explain the s390 jmp_buf / ucontext_t ABI change
	reversal.

2014-07-31  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/generic/safe-fatal.h: New file.